SEO optimization and resource compression

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Personal website for Connor Bernard, Software Developer.  Check out his portfolio here!" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
         <link rel="manifest" href="/manifest.json" />
-        <link rel="stylesheet" href="/assets/css/master.css" />
+        <link rel="stylesheet" href="/assets/css/index.css" />
+        <!-- <link rel="stylesheet" href="/assets/css/master.css" />
         <link rel="stylesheet" href="/assets/css/hello.css" />
         <link rel="stylesheet" href="/assets/css/about.css" />
         <link rel="stylesheet" href="/assets/css/experience.css" />
         <link rel="stylesheet" href="/assets/css/portfolio.css">
-        <link rel="stylesheet" href="/assets/css/contact.css" />
-        <title>Connor Bernard</title>
+        <link rel="stylesheet" href="/assets/css/contact.css" /> -->
+        <title>Connor Bernard Personal Website</title>
     </head>
     <body>
         <!-- <div class="blur" id="blur1">
@@ -32,7 +34,7 @@
         <header>
             <div class="hfContent">
                 <div class="logo">
-                    <a href="#top"><img src="/assets/img/logo.svg" height=65px /></a>
+                    <a href="#top"><img src="/assets/img/logo.svg" alt="Logo" height=65px /></a>
                 </div>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -67,7 +69,7 @@
         <section id="helloSection">
             <div class="halfSection">
                 <div id="helloTextSection">
-                    <h2>Hey! My name is</h2>
+                    <h3>Hey! My name is</h3>
                     <div class="textGradient2">
                         <h1 id="helloName">Connor Bernard</h1>
                     </div>
@@ -76,7 +78,7 @@
                     <div id="helloButtonSection">
                         <a href="/assets/files/Connor_Resume.pdf" download="true">
                             <button class="accentButton">
-                                <img src="/assets/img/download.svg" />
+                                <img src="/assets/img/download.svg" alt="download icon" />
                                 Download CV
                             </button>
                         </a>
@@ -95,34 +97,34 @@
         <section id="aboutMeSection">
             <div id="aboutMeTextContent">
                 <div class="sectionTitle">
-                    <h1>About Me</h1>
-                    <img src="/assets/img/sectionDividerLine.svg" />
+                    <h2>About Me</h2>
+                    <img src="/assets/img/sectionDividerLine.svg" alt="Section divider" />
                 </div>
                 <p>
                     Hi!  I'm Connor!  I'm a full stack software engineer from Woodside, CA studying Computer Science at the University of California, Berkeley.
-                    As far as software development goes, I've been passionate about the trade dating all the way back to when I was 5 - yep I have been a complete
+                    As far as software development goes, I've been passionate about the trade dating all the way back to when I was 7 - yep I have been a complete
                     tech nerd for my entire life, and I wouldn't have it any other way.  All that said, my life is far from just computers!  Besides software development,
                     I am super passionate about photography, psychology, cars, LGBTQ community engagement, weightlifting, music, and travel.  If you're interested in
                     my profile or just want to say hello, please do so <a href="#Contact">here</a>!  I look forward to hearing from you!
                 </p>
             </div>
             <div class="iconSection">
-                <h2>My Languages</h2>
+                <h3>My Languages</h3>
                 <div language class="icons">
                     <template iconTemplate>
                         <div class="icon">
-                            <img src="Source Location" />
+                            <img src="Source Location" alt="Language Icon" />
                             <p>Language Name</p>
                         </div>
                     </template>
                 </div>
             </div>
             <div class="iconSection">
-                <h2>My Utilities</h2>
+                <h3>My Utilities</h3>
                 <div utility class="icons">
                     <template iconTemplate>
                         <div class="icon">
-                            <img src="Source Location" />
+                            <img src="Source Location" alt="Utility Icon" />
                             <p>Language Name</p>
                         </div>
                     </template>
@@ -135,8 +137,8 @@
         <div id="Experience" class="jumpLocation"></div>
         <section id="experienceSection">
             <div class="sectionTitle">
-                <h1>Experience</h1>
-                <img src="/assets/img/sectionDividerLine.svg" />
+                <h2>Experience</h2>
+                <img src="/assets/img/sectionDividerLine.svg" alt="Section divider" />
             </div>
             <div id="experienceBoxes">
                 <template experienceBoxTemplate>
@@ -148,12 +150,12 @@
                                 <div class="fakeNavBarItem green"></div>
                             </div>
                             <img class="experienceLogo" src="COMPANY IMAGE" />
-                            <h2>Title</h2>
+                            <h3>Title</h3>
                             <ul>
                                 <template experienceSubItemTemplate>
                                     <li>
                                         <p>
-                                            <strong class="experienceSubtitle"></strong><strong class="locationSubtitle"></strong><span class="experienceCopy"></span>
+                                            <strong class="experienceSubtitle">Experience Name</strong><strong class="locationSubtitle">Location</strong><span class="experienceCopy">Experience Copy</span>
                                         </p>
                                     </li>
                                 </template>
@@ -168,14 +170,14 @@
         <div id="Portfolio" class="jumpLocation"></div>
         <section id="portfolioSection">
             <div class="sectionTitle">
-                <h1>Portfolio</h1>
-                <img src="/assets/img/sectionDividerLine.svg" />
+                <h2>Portfolio</h2>
+                <img src="/assets/img/sectionDividerLine.svg" alt="Section divider" />
             </div>
             <div id="portfolioItems">
                 <template portfolioItemTemplate>
                     <div class="rainbowBorder">
                         <div class="portfolioItem">
-                                <h2>Title</h2>
+                                <h3>Title</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
                                 id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
                                 maecenas donec blandit tortor ligula quis integer.</p>
@@ -193,8 +195,8 @@
         <div id="Contact" class="jumpLocation"></div>
         <section id="contactSection">
             <div class="sectionTitle">
-                <h1>Say Hello!</h1>
-                <img src="/assets/img/sectionDividerLine.svg" />
+                <h2>Say Hello!</h2>
+                <img src="/assets/img/sectionDividerLine.svg" alt="Section divider" />
             </div>
             <form autocomplete="off">
                 <div id="formIntro">
@@ -274,11 +276,12 @@
                 </div>
             </footer>
         </div>
-        <script src="/assets/js/master.js" defer></script>
+        <!-- <script src="/assets/js/master.js" defer></script> -->
+        <script src="/assets/js/index.js"></script>
         <script src="/assets/js/noframework.waypoints.min.js" defer></script>
-        <script src="/assets/js/waypoints.js" defer></script>
-        <script src="/assets/js/experience.js" defer></script>
-        <script src="/assets/js/portfolio.js" defer></script>
         <script src="/assets/js/contact.js" type="module" defer></script>
+        <script src="/assets/js/waypoints.js" defer></script>
+        <!-- <script src="/assets/js/experience.js" defer></script>
+        <script src="/assets/js/portfolio.js" defer></script> -->
     </body>
 </html>
