--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/assets/css/experience.css" />
         <link rel="stylesheet" href="/assets/css/portfolio.css">
         <link rel="stylesheet" href="/assets/css/contact.css" /> -->
-        <title>Connor Bernard Personal Website</title>
+        <title>Connor Bernard</title>
     </head>
     <body>
         <!-- <div class="blur" id="blur1">
@@ -130,7 +130,7 @@
                     </template>
                 </div>
             </div>
-            <script src="/assets/js/icons.js" type="module"></script>
+            <script src="/assets/js/icons-min.js" type="module"></script>
             <span id="AboutMeUp"></div>
         </section>
 
@@ -155,7 +155,11 @@
                                 <template experienceSubItemTemplate>
                                     <li>
                                         <p>
-                                            <strong class="experienceSubtitle">Experience Name</strong><strong class="locationSubtitle">Location</strong><span class="experienceCopy">Experience Copy</span>
+                                            <strong class="experienceSubtitle">Experience Name</strong><strong class="locationSubtitle">Location</strong><span class="experienceCopy">
+                                                Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
+                                                id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
+                                                maecenas donec blandit tortor ligula quis integer.
+                                            </span>
                                         </p>
                                     </li>
                                 </template>
@@ -242,7 +246,7 @@
                         <a href="https://bitbucket.org/connor-bernard/">
                             <img src="/assets/img/socialIcons/Bitbucket Logo.png" alt="BitBucket access link">
                         </a>
-                        <a href="mailto:connorbernard@berkeley.edu">
+                        <a href="mailto:connor@connorbernard.dev">
                             <img src="/assets/img/socialIcons/Mail Symbol.png" alt="Email access link">
                         </a>
                     </div>
@@ -279,8 +283,8 @@
         <!-- <script src="/assets/js/master.js" defer></script> -->
         <script src="/assets/js/index.js"></script>
         <script src="/assets/js/noframework.waypoints.min.js" defer></script>
-        <script src="/assets/js/contact.js" type="module" defer></script>
-        <script src="/assets/js/waypoints.js" defer></script>
+        <script src="/assets/js/contact-min.js" type="module" defer></script>
+        <script src="/assets/js/waypoints-min.js" defer></script>
         <!-- <script src="/assets/js/experience.js" defer></script>
         <script src="/assets/js/portfolio.js" defer></script> -->
     </body>
